--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         
     </section>
     <footer class="text-center mt-2">
-        <p>© LegalZoom.com, Inc. All rights reserved. </p>
+        <p>© sayem, Inc. All rights reserved. </p>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
